# mybenchmark

./: 1-topic-1-partition-1kb-Kafka-2025-10-13-16-21-16.json  1-topic-1-partition-1kb-Kafka-2025-10-13-18-06-04.json  1-topic-1-partition-1kb-Kafka-2025-10-13-18-11-28.json  1-topic-1-partition-1kb-Kafka-2025-10-13-22-04-28.json  1-topic-1-partition-1kb-Kafka-2025-10-13-22-14-16.json  1-topic-1-partition-1kb-Kafka-2025-10-13-23-56-20.json  1-topic-1-partition-1kb-Kafka-2025-10-14-00-08-53.json  1-topic-1-partition-1kb-Kafka-2025-10-14-00-14-26.json  1-topic-1-partition-1kb-Pulsar-2025-10-13-16-38-11.json  1-topic-1-partition-1kb-Pulsar-2025-10-13-16-47-22.json  1-topic-1-partition-1kb-Pulsar-2025-10-13-16-56-31.json  1-topic-1-partition-1kb-Pulsar-2025-10-13-17-06-24.json  1-topic-1-partition-1kb-Pulsar-2025-10-13-17-48-45.json  1-topic-1-partition-1kb-Pulsar-2025-10-13-17-58-02.json  1-topic-1-partition-1kb-Pulsar-2025-10-13-18-57-54.json  ARCHITECTURE_V2.md  BUG_REPORT.md  COMPARISON.md  CONTROLLED_EXPERIMENT.md  DESIGN_ANALYSIS.md  DISTRIBUTED_DEPLOYMENT.md  Dockerfile  FIXES_APPLIED.md  IMPLEMENTATION_SUMMARY.md  KAFKA_JMX_MONITORING.md  MESSAGE_SIZE_EXPERIMENT.md  MULTIPROCESSING_ANALYSIS.md  MULTIPROCESS_MODE.md  README.md  REFACTOR_SUMMARY.md  analyze_controlled_experiment.py  analyze_ht.sh  analyze_message_size_results.py  analyze_results.sh  check_kafka_throughput.sh  config.yml  docker-compose-kafka-alternative.yml  docker-compose-kafka.yml  docker-compose-pulsar.yml  docker-compose.yaml  (+35 more)
benchmark/: __init__.py  __main__.py  benchmark.py  cli.py  coordinator.py  rate_controller.py  test_result.py  workload.py  workload_generator.py
benchmark_results/: consumer_0_stats.pkl  consumer_1_stats.pkl
configs/: kafka-digital-twin.yaml  kafka-latency.yaml  kafka-max-throughput.yaml  kafka-throughput.yaml
docs/: PROJECT_OVERVIEW.md  USAGE.md
examples/: distributed-workload.yaml  kafka-driver-max-throughput.yaml  kafka-driver-optimized.yaml  kafka-driver.yaml  pulsar-driver.yaml  (+8 more)
(+189 files in other folders)
